--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
 					{% if post.tags != empty %}
             		|
             		{% for tag in post.tags %}
-            		<a class="codinfox-tag-mark" href="/tag/#{{ tag | slugify }}">{{ tag }}</a>
+            		<a class="codinfox-tag-mark" href="{{ site.baseurl }}/tag/#{{ tag | slugify }}">{{ tag }}</a>
             		{% endfor %}
             		{% endif %}
 				</div>
