--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,12 +26,11 @@ layout: default
 				</div>
 				<em><hr></em>
 				<div class="labels">
-					{% if post.tags != empty %}
-            		|
-            		{% for tag in post.tags %}
-            		<a class="codinfox-tag-mark" href="/category/tag/#{{ tag | slugify }}">{{ tag }}</a>
-            		{% endfor %}
-            		{% endif %}
+   				{% if post.tags %} | 
+				{% for tag in post.tags %}
+				<a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
+    			{% endfor %}
+    			{% endif %}
 				</div>
 				<aside id="post-share">
 					{% include share.html %}
