--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -1,28 +1,85 @@
 ---
-layout: page
-title: Categories
+layout:   default
+title:    Categorías
 ---
+{% comment%}
+Here we generate all the categories.
+{% endcomment%}
 
-<div class="tags-expo">
-  <div class="tags-expo-list">
-    {% for tag in site.categories %}
-    <a href="#{{ tag[0] | slugify }}" class="post-tag">{{ tag[0] }}</a>
-    {% endfor %}
-  </div>
-  <hr/>
-  <div class="tags-expo-section">
-    {% for tag in site.categories %}
-    <h2 id="{{ tag[0] | slugify }}">{{ tag[0] }}</h2>
-    <ul class="tags-expo-posts">
-      {% for post in tag[1] %}
-        <a class="post-title" href="{{ site.baseurl }}{{ post.url }}">
-      <li>
+{% assign rawcats = "" %}
+{% for post in site.posts %}
+{% assign tcats = post.category | join:'|' | append:'|' %}
+{% assign rawcats = rawcats | append:tcats %}
+{% endfor %}
+
+{% assign rawcats = rawcats | split:'|' | sort %}
+
+{% assign cats = "" %}
+
+{% for cat in rawcats %}
+{% if cat != "" %}
+
+{% if cats == "" %}
+{% assign cats = cat | split:'|' %}
+{% endif %}
+
+{% unless cats contains cat %}
+{% assign cats = cats | join:'|' | append:'|' | append:cat | split:'|' %}
+{% endunless %}
+{% endif %}
+{% endfor %}
+
+<header id="page-header" class="page-title">
+  <a href="{{ site.baseurl }}/">Blog</a> | {{ page.title }}
+</header>
+<main id="page-main" class="post-dark">
+	<div class="posts">
+	<p>
+	{% for ct in cats %}
+	<a href="#{{ ct | slugify }}" class="codinfox-category-mark" style="color:#999;text-decoration: none;"> {{ ct }} </a> &nbsp;&nbsp;
+	{% endfor %}
+	<a href="#no-category" class="codinfox-category-mark" style="color:#999;text-decoration: none;"> No Category </a> &nbsp;&nbsp;
+	</p>
+
+{% for ct in cats %}
+<h2 id="{{ ct | slugify }}">{{ ct }}</h2>
+<ul class="codinfox-category-list">
+  {% for post in site.posts %}
+  {% if post.category contains ct %}
+  <li>
+    <h3>
+      <a href="{{ post.url }}">
         {{ post.title }}
-      <small class="post-date">{{ post.date | date_to_string }}</small>
-      </li>
+        <small>{{ post.date | date_to_string }}</small>
       </a>
+      {% for tag in post.tags %}
+      <a class="codinfox-tag-mark" href="/_layouts/tag/#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
-    </ul>
-    {% endfor %}
-  </div>
-</div>
+    </h3>
+  </li>
+  {% endif %}
+  {% endfor %}
+</ul>
+{% endfor %}
+
+<h2 id="no-category">No Category</h2>
+<ul class="codinfox-category-list">
+  {% for post in site.posts %}
+  {% unless post.category %}
+  <li>
+    <h3>
+      <a href="{{ post.url }}">
+        {{ post.title }}
+        <small>{{ post.date | date_to_string }}</small>
+      </a>
+      {% for tag in post.tags %}
+      <a class="codinfox-tag-mark" href="{{ site.baseurl }}/category/tag/#{{ tag | slugify }}">{{ tag }}</a>
+      {% endfor %}
+    </h3>
+  </li>
+  {% endunless %}
+  {% endfor %}
+</ul>
+
+	</div>
+</main>
