--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,28 +1,65 @@
 ---
-layout: page
-title: Tags
+layout: default
+title: Tag
 ---
+{% comment%}
+Here we generate all the tags.
+{% endcomment%}
 
-<div class="tags-expo">
-  <div class="tags-expo-list">
-    {% for tag in site.tags %}
-    <a href="#{{ tag[0] | slugify }}" class="post-tag">{{ tag[0] }}</a>
-    {% endfor %}
-  </div>
-  <hr/>
-  <div class="tags-expo-section">
-    {% for tag in site.tags %}
-    <h2 id="{{ tag[0] | slugify }}">{{ tag[0] }}</h2>
-    <ul class="tags-expo-posts">
-      {% for post in tag[1] %}
-        <a class="post-title" href="{{ site.baseurl }}{{ post.url }}">
-      <li>
+{% assign rawtags = "" %}
+{% for post in site.posts %}
+{% assign ttags = post.tags | join:'|' | append:'|' %}
+{% assign rawtags = rawtags | append:ttags %}
+{% endfor %}
+
+{% assign rawtags = rawtags | split:'|' | sort %}
+
+{% assign tags = "" %}
+
+{% for tag in rawtags %}
+{% if tag != "" %}
+
+{% if tags == "" %}
+{% assign tags = tag | split:'|' %}
+{% endif %}
+
+{% unless tags contains tag %}
+{% assign tags = tags | join:'|' | append:'|' | append:tag | split:'|' %}
+{% endunless %}
+{% endif %}
+{% endfor %}
+
+<header id="page-header" class="page-title">
+  <a href="{{ site.baseurl }}/">Blog</a> | {{ page.title }}
+</header>
+<main id="page-main" class="post-dark">
+
+<div class="posts">
+<p>
+{% for tag in tags %}
+<a href="#{{ tag | slugify }}" class="codinfox-tag-mark"> {{ tag }} </a> &nbsp;&nbsp;
+{% endfor %}
+
+{% for tag in tags %}
+<h2 id="{{ tag | slugify }}">{{ tag }}</h2>
+<ul class="codinfox-category-list">
+  {% for post in site.posts %}
+  {% if post.tags contains tag %}
+  <li>
+    <h3>
+      <a href="{{ post.url }}">
         {{ post.title }}
-      <small class="post-date">{{ post.date | date_to_string }}</small>
-      </li>
+        <small>{{ post.date | date_to_string }}</small>
       </a>
+      {% for tag in post.tags %}
+      <a class="codinfox-tag-mark" href="/_layouts/tag/#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
-    </ul>
-    {% endfor %}
-  </div>
+    </h3>
+  </li>
+  {% endif %}
+  {% endfor %}
+</ul>
+{% endfor %}
+
 </div>
+</main>
