--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
 					{% if post.tags != empty %}
             		|
             		{% for tag in post.tags %}
-            		<a class="label" href="/_layouts/tag/#{{ tag | slugify }}">{{ tag }}</a>
+            		<a class="label" href="/_layouts/tags/#{{ tag | slugify }}">{{ tag }}</a>
             		{% endfor %}
             		{% endif %}
 				</div>
