--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,12 +26,9 @@ layout: default
 				</div>
 				<em><hr></em>
 				<div class="labels">
-					{% if post.tags != empty %}
-            		|
-            		{% for tag in post.tags %}
-            		<a class="label" href="/blog/tags/#{{ tag | slugify }}">{{ tag }}</a>
-            		{% endfor %}
-            		{% endif %}
+				{% for tag in tags %}
+				<a href="#{{ tag | slugify }}" class="codinfox-tag-mark"> {{ tag }} </a> &nbsp;&nbsp;
+				{% endfor %}
 				</div>
 				<aside id="post-share">
 					{% include share.html %}
