--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,32 +1,6 @@
 ---
 layout: default
 ---
-{% comment%}
-Here we generate all the tags.
-{% endcomment%}
-
-{% assign rawtags = "" %}
-{% for post in site.posts %}
-{% assign ttags = post.tags | join:'|' | append:'|' %}
-{% assign rawtags = rawtags | append:ttags %}
-{% endfor %}
-
-{% assign rawtags = rawtags | split:'|' | sort %}
-
-{% assign tags = "" %}
-
-{% for tag in rawtags %}
-{% if tag != "" %}
-
-{% if tags == "" %}
-{% assign tags = tag | split:'|' %}
-{% endif %}
-
-{% unless tags contains tag %}
-{% assign tags = tags | join:'|' | append:'|' | append:tag | split:'|' %}
-{% endunless %}
-{% endif %}
-{% endfor %}
 
 	{% include partials/navigation/nav-article.html %}
 	<header id="post-header" class="head-band anm-moveFromLeft">
@@ -52,12 +26,9 @@ Here we generate all the tags.
 				</div>
 				<em><hr></em>
 				<div class="labels">
-					{% if post.tags != empty %}
-            		|
-            		{% for tag in post.tags %}
-            		<a class="label" href="{{ site.baseurl }}/blog/tags/#{{ tag | slugify }}">{{ tag }}</a>
-            		{% endfor %}
-            		{% endif %}
+    {% for tag in page.tags %}
+      <span class="codinfox-tag-mark">{{ tag }}</span>
+    {% endfor %}
 				</div>
 				<aside id="post-share">
 					{% include share.html %}
