--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
 				<em><hr></em>
 				<div class="labels">
     {% for tag in page.tags %}
-      <span class="codinfox-tag-mark">{{ tag }}</span>
+      <a href="{{ site.baseurl }}/blog/tags/#{{ tag }}" class="tagged">{{ tag }}</a>
     {% endfor %}
 				</div>
 				<aside id="post-share">
