--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,6 +36,12 @@ layout: default
 				<div id="date">
     				<p>Publicat el {{ page.date | date: "%e %B , %Y" }}</p>
   				</div>
+				<em><hr></em>
+				<div>
+					<h3><u>Comentaris</u></h3>
+					{% include disqus.html %}
+				</div>
+  				<hr>
 			</article>
 		</div>
 	</main>
