--- a/hipertextos/styles/components.css
+++ b/hipertextos/styles/components.css
@@ -81,7 +81,7 @@
 }
 .list article h3,
 #layout-list:checked ~ #layout-result article h3 {
-	margin: 0;
+	margin: 0;font-size:1.3em;
 	padding: 0 64px 0 0;
 }
 .list article h3 a,
@@ -90,8 +90,8 @@
 }
 .list article strong,
 #layout-list:checked ~ #layout-result article strong {
-	font-size: 15px;
-	margin: 0;
+	font-size: 15px;width:78.3%;float:right;
+	margin: 0;line-height: 15px;
 }
 .list article div,
 #layout-list:checked ~ #layout-result article div {
@@ -105,7 +105,7 @@
 	border-radius: 12%;
 	height: 210px;
 	float: left;
-	margin: 0 32px 0 0;
+	margin: -29px 32px 0 0;
 	object-fit: cover;	
 	width: 210px;
 }
