--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -108,6 +108,8 @@ main { padding-top:3px;margin-bottom: 232px;z-index: 1;
     box-shadow:0 75px 60px rgba(0,0,0,.32);
 }
 #page-footer {position: fixed;box-shadow: inset 0 0 32px rgba(0, 0, 0, .32);bottom: 0px;z-index: -1;width: 100%;}
+.pagination {display:none;visibility:hidden;}
+
 @media (max-width: 1250px) {
    	img.dialog-svg {width:80px!important;height:70px;}
     #coffee .thumb-2 {width: 33.33333%!important;}
