--- a/hipertextos/styles/components.css
+++ b/hipertextos/styles/components.css
@@ -81,7 +81,7 @@
 }
 .list article h3,
 #layout-list:checked ~ #layout-result article h3 {
-	margin: 0;font-size:1.6em;line-height:1.15em;margin-top:5px;margin-bottom:-32px;
+	margin: 0;font-size:1.6em;line-height:1.15em;margin-top:5px;margin-bottom:-12px;
 	padding: 0 64px 0 0;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;
 }
 .list article h3 a,
@@ -90,8 +90,8 @@
 }
 .list article strong,
 #layout-list:checked ~ #layout-result article strong {
-	font-size: 16px;float:right;
-	margin-top:22px ;line-height: 6px;
+	font-size: 15px;position:absolute;right:1px;
+	margin-top:22px ;
 }
 .list article div,
 #layout-list:checked ~ #layout-result article div {
