--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -41,10 +41,12 @@ section.cover-justify p {padding: 6px 18px 0 18px;line-height: 23px;font-size: 1
 #icons a:hover {border:thin solid var(--color-blue);}
 figure em a {border:none;border-bottom;line-height:0.2em;padding:12px 4px;}
 
+/* TAGS & CATGEGORIES*/
 a.tagged  {color:var(--color-hardgrey) ;text-decoration: none;border:thin solid currentcolor;display:inline-block ; padding:4px 12px 6px 12px;margin-top:9px;border-radius:25px;}
 a.tagged:before  {content:'#'; }
 a.tagged:hover {color:var(--color-hardgrey) ;}
 
+.cat-img {width:256px;height:auto;}
 
 /* Portfolio Nav */
 #page-nav {border:none;color:var(--color-hardgrey);} 
