--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -45,6 +45,8 @@ figure em a {border:none;border-bottom;line-height:0.2em;padding:12px 4px;}
 a.tagged  {color:var(--color-hardgrey) ;text-decoration: none;border:thin solid currentcolor;display:inline-block ; padding:4px 12px 6px 12px;margin-top:9px;border-radius:25px;}
 a.tagged:before  {content:'#'; }
 a.tagged:hover {color:var(--color-hardgrey) ;}
+.cat-post {height:110px;width:50%;float:left;}
+.cat-post h6 {text-overflow: ellipsis;white-space: nowrap;overflow: hidden;}
 p .mini {font-size:14px;line-height:15px;}
 .cat-img {width:170px;height:auto;float:left;margin:0 16px 0 0;}
 
@@ -153,7 +155,8 @@ main { padding-top:3px;margin-bottom: 232px;z-index: 1;
     aside.thumb-3 h2{font-size: 2.6em;color: var(--color-hardgrey) }
     #page-nav a {font-size: 13px;}
     strong em a {font-size: 15px;}
-    main { margin-bottom: 360px;	}
+    main { margin-bottom: 360px;}
+    .cat-post {height:110px;width:100%;float:none;}
     .cell-6, .pushed-6 {width:85%;margin-left:8% !important;}
     #coffee .thumb-2 {width: 90%!important;}
     #coffee .pushed-5 {margin-left:5%!important;}
