--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,16 +31,18 @@ layout: default
 				</div>
 				<div class="PageNavigation">
 				  {% if page.previous.url %}
+				  	<a class="prev thumb-6" href="{{ page.previous.url }}">
 				  	<figure>
 						<img src="https://i1.ytimg.com/vi/{{ page.previous.img }}/maxresdefault.jpg" rel="{% for tag in page.previous.tags %} {{ tag }}, {% endfor %}">
 					</figure>
-				    <a class="prev" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
+				    <h5>&laquo; {{ page.previous.title }}</h5></a>
 				  {% endif %}
 				  {% if page.next.url %}
+				  	<a class="next thumb-6" href="{{ page.next.url }}">
 				  	<figure>
 						<img src="https://i1.ytimg.com/vi/{{ page.next.img }}/maxresdefault.jpg" rel="{% for tag in page.next.tags %} {{ tag }}, {% endfor %}">
 					</figure>
-				    <a class="next" href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
+				    <h5>{{ page.next.title }} &raquo;</h5></a>
 				  {% endif %}
 				</div>
 				<aside id="post-share">
