--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,12 +33,12 @@ layout: default
 				  {% if page.previous.url %}
 				  	<a class="prev thumb-6" href="{{ page.previous.url }}">
 						<img src="https://i1.ytimg.com/vi/{{ page.previous.img }}/maxresdefault.jpg" rel="{% for tag in page.previous.tags %} {{ tag }}, {% endfor %}">
-				    <h5>&laquo; {{ page.previous.title }}</h5></a>
+				    &laquo; {{ page.previous.title }}</a>
 				  {% endif %}
 				  {% if page.next.url %}
 				  	<a class="next thumb-6" href="{{ page.next.url }}">
 						<img src="https://i1.ytimg.com/vi/{{ page.next.img }}/maxresdefault.jpg" rel="{% for tag in page.next.tags %} {{ tag }}, {% endfor %}">
-				    <h5>{{ page.next.title }} &raquo;</h5></a>
+				    {{ page.next.title }} &raquo;</a>
 				  {% endif %}
 				</div>
 				<aside id="post-share">
