--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,13 +31,12 @@ layout: default
 				</div>
 				<div class="PageNavigation">
 				  {% if page.previous.url %}
-				  	<a class="prev thumb-6" href="{{ page.previous.url }}">
-						<img src="https://i1.ytimg.com/vi/{{ page.previous.img }}/maxresdefault.jpg" rel="{% for tag in page.previous.tags %} {{ tag }}, {% endfor %}">
-				    &laquo; {{ page.previous.title }}</a>
+				  	<img class="thumb-2" src="https://i1.ytimg.com/vi/{{ page.previous.img }}/maxresdefault.jpg" rel="{% for tag in page.previous.tags %} {{ tag }}, {% endfor %}">
+				  	<a class="prev thumb-4" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
 				  {% endif %}
 				  {% if page.next.url %}
-				  	<a class="next thumb-6" href="{{ page.next.url }}">
-						<img src="https://i1.ytimg.com/vi/{{ page.next.img }}/maxresdefault.jpg" rel="{% for tag in page.next.tags %} {{ tag }}, {% endfor %}">
+					<img class="thumb-2" src="https://i1.ytimg.com/vi/{{ page.next.img }}/maxresdefault.jpg" rel="{% for tag in page.next.tags %} {{ tag }}, {% endfor %}">
+				  	<a class="next thumb-4" href="{{ page.next.url }}">
 				    {{ page.next.title }} &raquo;</a>
 				  {% endif %}
 				</div>
