--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -39,6 +39,10 @@ figure div iframe {width:100%;z-index: 100;}
 #fb {background:var(--color-blue);border:1px solid var(--color-blue);}
 #go {background:var(--color-orange);border:1px solid var(--color-orange);}
 
+.PageNavigation img {padding:5px;object-fit: cover;width:100%;height:160px;}
+.PageNavigation .prev {text-align:right ;}
+.PageNavigation .next {text-align:left ;}
+
 h3 a {color: var(--color-hardgrey) }
 h3 a:hover {color: var(--color-link); text-decoration:none;}
 
