--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -39,6 +39,7 @@ figure div iframe {width:100%;z-index: 100;}
 #fb {background:var(--color-blue);border:1px solid var(--color-blue);}
 #go {background:var(--color-orange);border:1px solid var(--color-orange);}
 
+.PageNavigation {z-index: 5;}
 .PageNavigation img {padding:5px;object-fit: cover;width:100%;height:120px;border:thin solid rgba(150,150,150,.15);}
 .PageNavigation .prev {text-align:right ;}
 .PageNavigation .next {text-align:left ;}
