--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -39,11 +39,12 @@ figure div iframe {width:100%;z-index: 100;}
 #fb {background:var(--color-blue);border:1px solid var(--color-blue);}
 #go {background:var(--color-orange);border:1px solid var(--color-orange);}
 
-.PageNavigation {z-index: 5;}
-.PageNavigation img {padding:5px;object-fit: cover;width:100%;height:120px;border:thin solid rgba(150,150,150,.15);}
-.PageNavigation .prev {text-align:right ;}
-.PageNavigation .next {text-align:left ;}
-.PageNavigation a {background:var(--color-translucentblack) ;min-height:180px;padding-top:9px;}
+.PageNavigation {z-index: 5;background:var(--color-translucentblack) ;min-height:180px;padding-top:12px;border-radius: 12px;border:1px solid var(--color-hard-grey);}
+.PageNavigation img {padding:5px;object-fit: cover;width:100%;height:140px;border:thin solid rgba(150,150,150,.15);}
+.PageNavigation .prev {text-align:left ;}
+.PageNavigation .next {text-align:right ;}
+.PageNavigation .prev a, .PageNavigation .next a {padding:6px;text-decoration: none;color:var(--color-grey);}
+.PageNavigation .prev .thumb-4 {border-right:1px solid var(--color-hard-grey) ;height:150px;}
 
 h3 a {color: var(--color-hardgrey) }
 h3 a:hover {color: var(--color-link); text-decoration:none;}
