--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -39,7 +39,7 @@ figure div iframe {width:100%;z-index: 100;}
 #fb {background:var(--color-blue);border:1px solid var(--color-blue);}
 #go {background:var(--color-orange);border:1px solid var(--color-orange);}
 
-.PageNavigation {z-index: 5;background:var(--color-translucentblack) ;min-height:180px;padding-top:12px;border-radius: 12px;border:1px solid var(--color-hard-grey);}
+.PageNavigation {z-index: 5;background:var(--color-translucentblack) ;min-height:180px;margin-top:21px;padding-top:12px;border-radius: 12px;border:1px solid var(--color-hard-grey);}
 .PageNavigation img {padding:5px;object-fit: cover;width:100%;height:140px;border:thin solid rgba(150,150,150,.15);}
 .PageNavigation .prev {text-align:left ;}
 .PageNavigation .next {text-align:right ;}
