--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,80 +1,109 @@
-	{% if page.posting %}
-	 <link rel="prerender" href="{{ page.next.url }}">
-	 <link rel="prerender" href="{{ page.previous.url }}">
-	{% endif %}
+    <meta charset="utf-8" />
+    <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
+	<link rel="canonical" href="http://videosmanguis.net/"/>		
 		
 	<meta name="distribution" content="global"/>
 	<meta name="keywords" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	<meta name="description" content="Los YouTubers que estás buscando. {{ site.description }} | Programa semanal en Youtube, normalmente en directo aunque también hacemos montajes y videos divertidos con post-producción | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney" />
 	<meta name="robots" content="index, follow" />
-    <meta name="author" href="http://isardmiralles.com" />
+    <meta name="author" href="https://plus.google.com/{{ site.footer-links.googleplus }}" />
     <meta name="designer" content="Videos Manguis">
 	<meta name="google-site-verification" content="Fo93HRW1pYCpTH0Ms73QTpXnt3PVx2k_2DnPa4YJiNk" />
+	
 	
 	<!-- Metadata: GeoTags -->
 	<meta name="geo.region" content="Catalunya" />
 	<meta name="geo.placename" content="Barcelona" />
 	<meta name="geo.position" content="41.4470282;2.2413973" />
 	<meta name="ICBM" content="41.4470282;2.2413973" />
+		
+	{% if page.posting %}
+	 <link rel="prerender" href="{{ page.next.url }}">
+	 <link rel="prerender" href="{{ page.previous.url }}">
+	{% endif %}
+		
+	<meta name="distribution" content="global"/>
+    {% if page.excerpt %}	
+	<meta name="keywords" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
+	{% else %}
+	<meta name="keywords" content="{{ site.tag }}" />
+    {% endif %}
+	<meta name="description" content="{{ site.description }}" />
+	<meta name="robots" content="index, follow" />
+    <meta name="author" href="http://videosmanguis.net" />
+    <meta name="designer" content="Isard Miralles">
+
+    {% if page.excerpt %}	
+	<meta itemprop="name" content="{{ page.title }} {{ site.name }}"/>
+	<meta itemprop="url" content="http://videosmanguis.net"/>
+	<meta itemprop="thumbnailUrl" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg"/>
+	<link rel="image_src" href="http://img.youtube.com/vi/{{ page.img }}/default.jpg" />
+	<meta itemprop="image" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg"/>
 
 	<meta property="og:type" content="website"/>			
-    {% if page.excerpt %}
-    <meta itemprop="name" content="{% if page.title %}{{ page.title }}{% endif %}">
-    <meta name="description" content="{{ page.excerpt| normalize_whitespace | strip_html }}" />
-    <meta itemprop="description" content="{{ page.excerpt| normalize_whitespace | strip_html }}">
-    <meta property="og:description" content="{{ page.excerpt| normalize_whitespace | strip_html }}" />
+
+    <meta itemprop="name" content="{{ page.title }} {{ site.name }}">
+    <meta name="description" content="{{ site.description }}" />
+    <meta itemprop="description" content="{{ site.description }}">
+    <meta property="og:description" content="{{ page.description | default: site.description}}" />
     <meta itemprop="image" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
-	<meta name="twitter:title" content="{{ page.title }}">
-	<meta name="twitter:description" content="{{ page.excerpt|  normalize_whitespace | strip_html }}">
+	<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
+	<meta name="twitter:description" content="{{ page.description | default: site.description}}">
 	<meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
 	<meta name="twitter:image:src" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg">
 	<!-- Open Graph data -->
-	<meta property="og:title" content="{{ page.title }}" />
+	<meta property="og:title" content="{{ site.name }}" />
 	<meta property="og:type" content="article" />
-	<meta property="og:url" content=" {{ site.baseurl }}" />
-	<meta property="og:image" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" />
-	<meta property="og:description" content="{{ page.excerpt|  normalize_whitespace | strip_html }}" />
-	<meta property="og:site_name" content="{{ site.baseurl }}" />
-	<meta property="og:url" content="{{ site.url }}{{ page.url }}">
-	<meta property="article:published_time" content="{{ page.date }}" />
+	<meta property="og:url" content="http://videosmanguis.net">
+	<meta property="og:image" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg" />
+	<meta property="og:site_name" content="http://videosmanguis.net" />
+	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
-	<meta property="article:section" content="Post" />
-	<meta property="article:tag" content="{% for tag in page.tags %} {{ tag }}, {% endfor %}" />
-	<meta property="fb:admins" content="Videos-Manguis-232512496769704 " />
-    {% else %}
+    {% if page.excerpt %}	
+	<meta property="article:tag" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
+	{% else %}
+	<meta property="article:tag" content="{{ site.tags }}" />
+    {% endif %}
+	<meta property="fb:admins" content="Videos-Manguis-232512496769704" />
+	{% else %}
 	<meta itemprop="name" content="Cover Page"/>
 	<meta itemprop="url" content="http://videosmanguis.net"/>
-	<meta itemprop="thumbnailUrl" content="http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
-	<link rel="image_src" href="http://videosmanguis.net/hipertextos/brand/cover.jpg" />
-	<meta itemprop="image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
+	<meta itemprop="thumbnailUrl" content="http://videosmanguis.net/img/branding.jpg"/>
+	<link rel="image_src" href="http://videosmanguis.net/img/branding.jpg" />
+	<meta itemprop="image" content="http://videosmanguis.net/img/branding.jpg"/>
+
+	<meta property="og:type" content="website"/>			
 
     <meta itemprop="name" content="{{ page.title }} {{ site.name }}">
-    <meta name="description" content="{{ site.description }} Programa semanal en Youtube, normalmente en directo aunque también hacemos montajes y videos divertidos con post-producción" />
-    <meta itemprop="description" content="Los YouTubers que estás buscando. {{ site.description }} | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney">
+    <meta name="description" content="{{ site.description }}" />
+    <meta itemprop="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ page.description | default: site.description}}" />
-    <meta itemprop="image" content="{{ site.baseurl }}/hipertextos/brand/cover.png">
+    <meta itemprop="image" content="http://videosmanguis.net/img/branding.jpg">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
 	<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
-	<meta name="twitter:description" content="{{ page.description | default: site.description}} | Programa semanal en Youtube, normalmente en directo aunque también hacemos montajes y videos divertidos con post-producción">
+	<meta name="twitter:description" content="{{ page.description | default: site.description}}">
 	<meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
-	<meta name="twitter:image:src" content="http://www.videosmanguis.net/">
+	<meta name="twitter:image:src" content="http://videosmanguis.net/img/branding.jpg">
 	<!-- Open Graph data -->
 	<meta property="og:title" content="{{ site.name }}" />
 	<meta property="og:type" content="article" />
-	<meta property="og:url" content="{{ site.url }}{{ page.url }}">
-	<meta property="og:image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg" />
-	<meta property="og:site_name" content="http://www.videosmanguis.net/" />
+	<meta property="og:url" content="http://videosmanguis.net">
+	<meta property="og:image" content="http://videosmanguis.net/img/branding.jpg" />
+	<meta property="og:site_name" content="http://videosmanguis.net" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
-	<meta property="article:tag" content="humor, videos divertidos, series, cine, películas, Star Wars, Stranger Things, Juego de Tronos, review, youtuber" />
-	<meta property="fb:admins" content="Videos-Manguis-232512496769704 " />
+	<meta property="article:tag" content="{{ site.tags }}" />
+	<meta property="fb:admins" content="Videos-Manguis-232512496769704" />
     {% endif %}
